--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Jugador" asp-action="Create">Crear jugador</a>
                         </li>
+                        <li class="nav-item"></li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Equipo" asp-action="AsociarJugador">Asociar jugador</a>
+                        </li>
+                        <li class="nav-item"></li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Equipo" asp-action="ListarJugadores">Lista de Jugadores</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
